"食品"から"食材"に変更、食材を減らす"ボタンの追加、各ファイルのコメントを修正

--- a/purineChecker/src/main/webapp/css/main.css
+++ b/purineChecker/src/main/webapp/css/main.css
@@ -19,14 +19,18 @@ p{
 	width:70px;
 	text-align: right;
 }
-#item, #result{
+.foods, #result{
 	margin-right: auto;
 	margin-left: auto;
 }
-#add{
-	color: blue;
+#add, #rem{
 	border-bottom: 1px solid blue;
+	color: blue;
 	cursor: pointer;
+}
+#rem{
+	margin-left: 10px;
+	
 }
 #btn{
 	margin-top: 15px;
