--- a/purineChecker/src/main/webapp/css/main.css
+++ b/purineChecker/src/main/webapp/css/main.css
@@ -1,10 +1,7 @@
 @charset "UTF-8";
 
 h1{
-	text-align: center;
-	color:#ff6633;}
-p{
-	text-align: center;
+	color:#ff6633;
 }
 #all{
 	padding: 10px;
@@ -20,8 +17,7 @@ p{
 	text-align: right;
 }
 .foods, #result{
-	margin-right: auto;
-	margin-left: auto;
+	margin-bottom: 15px;
 }
 #add, #rem{
 	border-bottom: 1px solid blue;
@@ -30,9 +26,7 @@ p{
 }
 #rem{
 	margin-left: 10px;
-	
 }
-#btn{
-	margin-top: 15px;
-	text-align: center;
+.btn{
+	margin-top: 15px;	
 }
